--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 				<div class="item">
 					<div class="hero-flex js-fullheight">
 						<div class="col-three-forth">
-							<div class="hero-img js-fullheight" style="background-image: url(images/NIKE_1.jpg);"></div>
+							<div class="hero-img js-fullheight" style="background-image: url(images/NIKE_1.JPG);"></div>
 						</div>
 						<div class="col-one-forth js-fullheight">
 							<div class="display-t js-fullheight">
